<!--
    Copyright (c) 2017 Inria and others.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v1.0
    which accompanies this distribution, and is available at
    http://www.eclipse.org/legal/epl-v10.html
   
    Contributors:
        Inria - initial API and implementation
 -->
<project xmlns="http://maven.apache.org/POM/4.0.0"
  xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
  http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>fr.inria.diverse.melange</groupId>
	<artifactId>fr.inria.diverse.melange.releng.root</artifactId>
	<version>0.2.2-SNAPSHOT</version>
	<packaging>pom</packaging>
	<name>Melange Root Build Manager</name>
	
	<modules>
		<module>../../devtools/fr.inria.diverse.melange.tools.root</module>
		<module>../../plugins/fr.inria.diverse.melange.plugins.root</module>
		<module>../../tests/fr.inria.diverse.melange.tests.root</module>
		<module>../fr.inria.diverse.melange.sdk</module>
		<module>../fr.inria.diverse.melange.p2updatesite</module>
		<module>../fr.inria.diverse.melange.target-platform</module>

	</modules>

	<properties>
		<maven.compiler.release>11</maven.compiler.release>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<kermeta.version>3.2.1-SNAPSHOT</kermeta.version>
		<emf.version>2.11.0</emf.version>
		<tycho.version>2.7.0</tycho.version>
		<tycho-extras.version>2.7.0</tycho-extras.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<xtext.version>2.27.0</xtext.version>
		<tycho.scmUrl>scm:git:https://github.com/diverse-project/melange.git</tycho.scmUrl>
		<tycho.disableP2Mirrors>true</tycho.disableP2Mirrors>
	</properties>

	<build>
        <sourceDirectory>src/main/java/src-gen/</sourceDirectory>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtext.version}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>xtend-install-debug-info</goal>
								<goal>testCompile</goal>
								<goal>xtend-test-install-debug-info</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>src/main/xtend-gen</outputDirectory>
					</configuration>
					<!--<dependencies>
						<dependency>
						    <groupId>org.eclipse.platform</groupId>
						    <artifactId>org.eclipse.equinox.common</artifactId>
						    <version>3.10.0</version>
						</dependency>
					</dependencies> -->
				</plugin>
			</plugins>
		</pluginManagement>
		
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-surefire-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<argLine>-Xmx2048m -XX:MaxPermSize=1024m</argLine>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.xtend</groupId>
				<artifactId>xtend-maven-plugin</artifactId>
				<!--<version>${xtext.version}</version>-->
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
        			<release>8</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<dependency-resolution>
			         <extraRequirements>
			            <requirement>
			               <type>eclipse-feature</type>
			               <id>org.eclipse.rcp</id>
			               <versionRange>0.0.0</versionRange>
			            </requirement>
							<requirement>
                        <type>eclipse-feature</type>
                        <id>org.eclipse.xtext.sdk</id>
                        <versionRange>0.0.0</versionRange>
                     </requirement>
			         </extraRequirements>
			      </dependency-resolution>
					<target>
						<artifact>
							<groupId>fr.inria.diverse.melange</groupId>
							<artifactId>fr.inria.diverse.melange.target-platform</artifactId>
							<version>${project.version}</version>
						</artifact>
					</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-packaging-plugin</artifactId>
				<version>${tycho.version}</version>
				<dependencies>
					<!-- <dependency>
						<groupId>org.eclipse.tycho.extras</groupId>
						<artifactId>tycho-buildtimestamp-jgit</artifactId>
						<version>${tycho-extras.version}</version>
					</dependency>-->
					<dependency>
       					<groupId>org.eclipse.tycho.extras</groupId>
			        	<artifactId>tycho-sourceref-jgit</artifactId>
			        	<version>${tycho-extras.version}</version>
			      	</dependency>
				</dependencies>
				<configuration>
					<!-- <strictBinIncludes>false</strictBinIncludes>
					<format>'v'yyyyMMdd-HHmm</format>-->
					<sourceReferences>
       					<generate>true</generate>
     					</sourceReferences>
				</configuration>
			</plugin>
			<!--<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.7.4.201502262128</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>prepare-package</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>-->
		</plugins>
	</build>
	<repositories>
		<repository>
			<id>eclipse</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/releases/2022-06/</url>
		</repository>
		<repository>
			<id>Xtext Update Site</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/modeling/tmf/xtext/updates/releases/${xtext.version}/</url>
		</repository>
		<repository>
			<id>mwe</id>
			<layout>p2</layout>
			<url>https://download.eclipse.org/modeling/emft/mwe/updates/releases/2.13.0/</url>
		</repository>
		<!-- <repository>
			<id>mavenInriaSnapshot</id>
			<name>http://maven.inria.fr-snapshots</name>
			<url>http://maven.inria.fr/artifactory/public-snapshot</url>
		</repository>
		<repository>
			<id>mavenInriaRelease</id>
			<name>http://maven.inria.fr-releases</name>
			<url>http://maven.inria.fr/artifactory/public-release</url>
		</repository>-->
	</repositories>
</project>

